# technical-rag

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  README.md  Taskfile.yml  curl.txt  docker-compose.yaml  pdf-reader-plan.md  plan.md
backend/: main.py  pyproject.toml
backend/migrations/: 000001_create_documents_table.up.sql  000002_create_chunks_table.up.sql  000003_add_bbox_to_chunks.down.sql  000003_add_bbox_to_chunks.up.sql  000004_add_status_and_file_size.down.sql  000004_add_status_and_file_size.up.sql  000005_add_search_vector_to_chunks.up.sql  000006_add_book_metadata.down.sql  000006_add_book_metadata.up.sql  000007_add_section_hierarchy_and_3072.down.sql  000007_add_section_hierarchy_and_3072.up.sql  000008_add_tags.down.sql  000008_add_tags.up.sql
backend/scripts/: generate_report.py  run_rag_eval.py  score_extraction.py  verify_extraction.py
backend/scripts/eval/: __init__.py  generation_eval.py  ground_truth.py  matrix_runner.py  pipeline_config.py  rag_ground_truth.py  report_renderer.py  retrieval_eval.py  scoring.py
backend/scripts/eval/datasets/: classaction-v1.json
backend/src/pdf_llm_server/: logger.py  server.py
backend/src/pdf_llm_server/rag/: __init__.py  database.py
backend/src/technical_rag/: __init__.py  logger.py  server.py
backend/src/technical_rag/rag/: __init__.py  database.py  models.py
backend/tests/: test_chunking.py  test_ocr.py  test_pdf_parser.py  test_rag_database.py  test_rag_embeddings.py  test_rag_eval.py  test_rag_ingestion.py  test_rag_retriever.py  test_reranker.py
frontend/: package.json  tsconfig.json  (+1 more)
(+44 files in other folders)
